refactored some mutators